--- a/frontend/src/assets/styles/home.css
+++ b/frontend/src/assets/styles/home.css
@@ -161,6 +161,7 @@
     border: 2px solid rgba(255,255,255,0.1);
     box-shadow: 0 0 40px rgba(8,7,16,0.6);
     padding: 50px 35px;
+    z-index: 1000;
 }
 .loginForm * {
     font-family: 'Poppins',sans-serif;
@@ -256,6 +257,8 @@
     border: 2px solid rgba(255,255,255,0.1);
     box-shadow: 0 0 40px rgba(8,7,16,0.6);
     padding: 50px 35px;
+    z-index: 1000;
+
 }
 .registerForm * {
     font-family: 'Poppins',sans-serif;
@@ -337,4 +340,34 @@
     width: 100%;
     height: 400px;
     object-fit: cover;
+}
+
+.videoInfo {
+    padding-top:60px;
+    padding-left: 50px;
+    font-family: 'Poppins','sans-serif';
+}
+.new-text {
+    color: #096cfe;
+    font-weight: 700;
+    font-size:25px
+}
+
+.videoInfo h1 {
+    font-size: 50px;
+}
+.description {
+    width: 680px;
+    font-size: 20px;
+}
+.downloadBtn {
+    height: 50px;
+    width: 150px;
+    margin-top: 10px;
+    border-radius:25px;
+    color:#096cfe;
+    background-color: white;
+    border:2px solid #096cfe;
+    margin-top: 10px;
+    font-weight: 600;
 }
